--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header, nav, section, aside, footer {
 }
 
 header, footer, nav {
-    margin: 15px;
+    margin: 10px;
     padding: 2.5em;
     clear: both;
 }
@@ -20,7 +20,8 @@ header, footer, nav {
 article {
     color: #ebebeb;
     background: #777;
-    padding: 15px;
+    padding: 10px;
+    margin-top: 20px;
 }
 
 h1, p {
@@ -33,23 +34,28 @@ h1, p {
 section{
     float: left;
     width: 495px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 2em;
-    padding-bottom: 2em;
-    margin: 15px;
+    padding: 2em 10px 2em 10px;
+    margin: 10px;
     height: 200px;
+    margin-bottom: 20px;
 }
 
 aside {
-    float: left;
+    overflow: hidden;
     width: auto;
-    margin: 15px;
+    margin-right: 10px;
+    margin-top: 20px;
     height: 200px;
+    padding: 2em;
+    margin-bottom: 20px;
 }
 
 .container {
     margin: 0 auto;
     text-align: center;
     overflow: auto;
+}
+
+span {
+    padding: 3em;
 }
